--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,4 +1,3 @@
-
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li class="bookmark" id="bookmark-<%= bookmark.id %>">
@@ -8,6 +7,9 @@
       <form action="/bookmarks/<%= bookmark.id %>" method="post">
         <input type='hidden' name='_method' value='DELETE'/>
         <input type="submit" value="Delete" />
+      </form>
+      <form action="/bookmarks/<%= bookmark.id %>/edit" method="get">
+        <input type="submit" value="Edit" />
       </form>
     </li>
   <% end %>
